:bento: (lettres) OCR
650818.LCM02.ANGO

--- a/lettres.html
+++ b/lettres.html
@@ -3739,7 +3739,62 @@
     
     
     </article><article><h2 id='650818.LCM02.ANGO'>Lettre n° 650818.LCM02.ANGO<a href="https://beatricemundo.github.io/lettresmedicis6466/#650818.LCM02.ANGO">↑</a></h2><discours loc="CathMed" id="650818.LCM02.ANGO" date="1565—18août">
-      <p> Monsieur du Ferrier, j'ay receu par ce porteur les besoignes de Levant que vous m'avez envoyées que j'ay trouvées très belles et en bonne quantité, et sans qu'il en soit rien gasté, ne rompu par les chemins, dont j'ay esté très aise; de quoy j'ay bien voulu vous advertir et vous renvoyer tout aussi tost cedict porteur que j'ai faict rembourser de tout ce qu'il avoit payé pour la conduicte desdictes besoignes et aussi pour s'en retourner vous trouver, vous priant au demourant, Monsieur du Ferrier, nous voulioir souvent escrire des nouvelles qui courent par dellà. Quant aux nostres, tout ce queje vous en puis escrire est que nous avons repassé la Garonne, aiant laissé la Guienne en bon repoz et union, estant maintenant à Angoulesmoys où, comme peultestre vous aurez jà entendu,il y a couru cy-devant ung bruict que ceulx de la religion voulloient venir présenter au Roy monsieur mon filz unerequesteavecques armes et grande compaignie; mays, Dieu mercy, tout cela c'est trouvé faulx; et n'y a ung seul homme dans ce royaulme qui face contenance de se bouger ou remuer et tant s'en fault que cela fut que le sr de la Rochefoucault,que vous sçavez estre de ladicte religion et avoir part au s pais de Xaintonge, Angoulmoys et Poictu, nous est venu trouver depuis troys ou quatre jours en intention de nous suivre et accompaigner tousjours en ce voyage, ce que j'ay bien voulu si particulièrement vous faire entendre, affin que ceulx qui nous sont mal affectionnés par dellà et sèment ordinairement des nouvelles contre ce royaulmepuissent,par ce queje vous mande cy dessus, estre confonduz et trouvez menteurs en tous leurs beaulx discours. Au demeurant, mon cousin le cardinal de Lorraine et le sr de Salcède son bailly de Vicq au païs Messin ont ces jours passés eu quelque picque, mays comme cella n'estoit qu'ung faict particulier, aussi a il tout soubdain esté appaisé par la diligence et dextéritédu sr d'Auzance qui, comme lieutenant du Roy monsieur mon fils audict païs, a bien sceu gecter le baston en cest endroict et faiel ce qu'il debvoit, qui a esté que, représentant l'auctorité de son maistre, il a faict cognoistre aux ungs et aux aultres ce qu'ilz debvoient respecter et de telle sorte que, Dieu rnercy, tout est en paix par dellà et tous les bruslemenset brouilleries appaisées; qui est, Monsieur du Ferrier, tout ce que je vous puis escrire pour ceste heure, priant Dieu qu'il vous ait en sa saincte et digne garde. Escript à Angoulesme, le XVIII0 jour d'aoust 1565.</p>
+    <p>Monsieur du Ferrier, j'ay receu par ce porteur
+      les besoignes de Levant que vous m'avez
+      envoyées que j'ay trouvées très belles et en
+      bonne quantité, et sans qu'il en soit rien
+      gasté, ne rompu par les chemins, dont j'ay
+      esté très aise; de quoy j'ay bien voulu vous
+      advertir et vous renvoyer tout aussi tost cedict
+      porteur que j'ai faict rembourser de tout
+      ce qu'il avoit payé pour la conduicte desdictes
+      besoignes et aussi pour s'en retourner vous
+      trouver, vous priant au demourant, Monsieur
+      du Ferrier, nous voulioir souvent escrire des
+      nouvelles qui courent par dellà. Quant aux
+      nostres, tout ce queje vous en puis escrire est
+      que nous avons repassé la Garonne, aiant
+      laissé la Guienne en bon repoz et union, estant
+      maintenant à Angoulesmoys où, comme
+      peultestre vous aurez jà entendu, il y a couru
+      cy-devant ung bruict que ceulx de la religion
+      voulloient venir présenter au Roy monsieur
+      mon filz unerequesteavecques armes et grande
+      compaignie; mays, Dieu mercy, tout cela c'est
+      trouvé faulx; et n'y a ung seul homme dans ce
+      royaulme qui face contenance de se bouger
+      ou remuer et tant s'en fault que cela fut que
+      le sr de la Rochefoucault,que vous sçavez estre
+      de ladicte religion et avoir part aus pais de
+      Xaintonge, Angoulmoys et Poictu, nous est
+      venu trouver depuis troys ou quatre jours en
+      intention de nous suivre et accompaigner
+      tousjours en ce voyage, ce que j'ay bien voulu
+      si particulièrement vous faire entendre, affin
+      que ceulx qui nous sont mal affectionnés par
+      dellà et sèment ordinairement des nouvelles
+      contre ce royaulmepuissent, par ce que je vous
+      mande cy dessus, estre confonduz et trouvez
+      menteurs en tous leurs beaulx discours. Au
+      demeurant, mon cousin le cardinal de Lorraine
+      et le sr de Salcède son bailly de Vicq
+      au païs Messin ont ces jours passés eu quelque
+      picque, mays comme cella n'estoit qu'ung
+      faict particulier, aussi a il tout soubdain esté
+      appaisé par la diligence et dextéritédu sr d'Auzance
+      qui, comme lieutenant du Roy monsieur
+      mon fils audict païs, a bien sceu gecter le
+      baston en cest endroict et faiel ce qu'il debvoit,
+      qui a esté que, représentant l'auctorité
+      de son maistre, il a faict cognoistre aux ungs
+      et aux aultres ce qu'ilz debvoient respecter et
+      de telle sorte que, Dieu mercy, tout est en paix
+      par dellà et tous les bruslemenset brouilleries
+      appaisées; qui est, Monsieur du Ferrier, tout
+      ce que je vous puis escrire pour ceste heure,
+      priant Dieu qu'il vous ait en sa saincte et
+      digne garde. Escript à Angoulesme, le XVIIIe
+      jour d'aoust 1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.  </p>
     </discours>
