:bento: (lettres) OCR
660223.LCM10.MOUL

--- a/lettres.html
+++ b/lettres.html
@@ -4591,7 +4591,7 @@
     
     
     </article><article><h2 id='660223.LCM10.MOUL'>Lettre n° 660223.LCM10.MOUL<a href="https://beatricemundo.github.io/lettresmedicis6466/#660223.LCM10.MOUL">↑</a></h2><discours loc="CathMed" id="660223.LCM10.MOUL" date="156693février1">
-    <p>>Monsr de Fourquevaulx, le Sr d'Arbouze,
+    <p>Monsr de Fourquevaulx, le Sr d'Arbouze,
       present porteur, gentilhomme servant de mon
       filz le duc d'Alençon, ayant envye d'apprendre
       et veoir, pour estre à l'advenir plus apte à fere
