:bento: (lettres) correction
641016.LCM02.AVIG.b

--- a/lettres.html
+++ b/lettres.html
@@ -2286,7 +2286,7 @@
     
     
     </article><article><h2 id='641016.LCM02.AVIG.b'>Lettre n° 641016.LCM02.AVIG.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#641016.LCM02.AVIG.b">↑</a></h2><discours loc="CathMed" id="641016.LCM02.AVIG.b" date="1564—16octobre">
-    <p>>Monsieur du Ferrier, la présente ne sera que
+    <p>Monsieur du Ferrier, la présente ne sera que
       pour accompaigner celle que Monsieur mon
       filz vous escript, affin de vous advertir de toutes
       noz nouvelles et occurances et parce que par
