:bento: (lettres) OCR
651020.LCM02.CHAT.d

--- a/lettres.html
+++ b/lettres.html
@@ -4059,7 +4059,22 @@
     
     
     </article><article><h2 id='651020.LCM02.CHAT.d'>Lettre n° 651020.LCM02.CHAT.d<a href="https://beatricemundo.github.io/lettresmedicis6466/#651020.LCM02.CHAT.d">↑</a></h2><discours loc="CathMed" id="651020.LCM02.CHAT.d" date="1565-20octobre">
-      <p> Messieurs, le Roy monsieur mon friz est grandement satisfaict du bon devoir dont vous usez à faire venir des blez et grains en vostre ville pour obvier a lanecessiteque vous y craignez et prévenez. En quoy il ne fault pas doubter qu'il ne vous ayde, ainsy que vous congnoisterez assez qu'il en a bonne envyepar les despesches qu'il vous envoye présentement, conformes à la requeste que vous luy en avez faicte, et de ma part vous pouvez eslre asseurez que je n'y nuyrai pas et que j'auray tousjours ce qui touche le bien de vostre ville en une singulière recommandation. Priant Dieu, Messieurs, qu'il vous ayt en sa saincte garde. Escript à Chasteaubriant, le xxe jour d'octobre 1565.</p>
+    <p>Messieurs, le Roy monsieur mon filz est
+      grandement satisfaict du bon devoir dont vous
+      usez à faire venir des blez et grains en vostre
+      ville pour obvier a la nécessité que vous y craignez
+      et prévenez. En quoy il ne fault pas
+      doubter qu'il ne vous ayde, ainsy que vous
+      congnoisterez assez qu'il en a bonne envye par
+      les despesches qu'il vous envoye présentement,
+      conformes à la requeste que vous luy en avez
+      faicte, et de ma part vous pouvez estre asseurez
+      que je n'y nuyrai pas et que j'auray tousjours
+      ce qui touche le bien de vostre ville en une
+      singulière recommandation. Priant Dieu, Messieurs,
+      qu'il vous ayt en sa saincte garde.
+      <p>Escript à Chasteaubriant, le XXe jour d'octobre
+      1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">De L'Aubespine.</hi></p>
     </discours>
