:bento: (lettres) correction
651020.LCM02.CHAT.d

--- a/lettres.html
+++ b/lettres.html
@@ -4072,7 +4072,7 @@
       que je n'y nuyrai pas et que j'auray tousjours
       ce qui touche le bien de vostre ville en une
       singulière recommandation. Priant Dieu, Messieurs,
-      qu'il vous ayt en sa saincte garde.
+      qu'il vous ayt en sa saincte garde.</p>
       <p>Escript à Chasteaubriant, le XXe jour d'octobre
       1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
