:bento: (lettres) OCR
650121.LCM02.CARC.b

--- a/lettres.html
+++ b/lettres.html
@@ -2738,9 +2738,44 @@
     
     
     </article><article><h2 id='650121.LCM02.CARC.b'>Lettre n° 650121.LCM02.CARC.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#650121.LCM02.CARC.b">↑</a></h2><discours loc="CathMed" id="650121.LCM02.CARC.b" date="1565—21janvier">
-      <p> Mon cousin, j'ay entendu par le sr de.la Serre ce que vous m'avez escript estre survenu à Paris à l'arrivée de mon cousin le cardinal de Lorraine, que j'eusse bien désiré avoir passé d'autre sorte; mais encores ay-je eu plaisir d'avoir sceu par quelques autres lectres venues de Paris, qu'il n'y ayt rien eu davan- taige et que la ville soyt demourée en repos dont j'actendz à sçavoir plus avant les particu- laritez par celluy que vous escripvez quant de quant me devoÏr-envoyer troys jours aprèsf jus ques auquel temps j'ay différay vous renvoyer ledict de la Serre, ne plus amplement vous en escripre, sinon par ce porteur, maistre des comptes, qui estoit venu icy pour aucuns affaires de la Chambre, vous pryant, mon cou- sin, faire eji sorte que toutes choses soyenL maintenues en la doulceur et paisible trans- quillité que vous sçavez que je désire et que requiert le service du Roy monsieur mon filz.</p>
-      <p> J'estime que le mauvais temps qu'il faict est cause qu'il n'est point encores venu d'autres, caf il y a huiet jours que sommes icy comme assiégez des neiges et de présent d'un dégel et pluye si grande que tous ses petiz ruis- seaux sont torrentz, qui ne se peuvent passer sans très grand danger, dont aussy nous rece- vons très grande incommodité; cependant es- loignez,. comme nous sommes, le plus grant ayse que je puisse avoir est que tout aille bien et soyt contenu en paix partout; à quoy je m'asseure que en ce qui est de vostre charge vous n'obmectrez ryens, comme je désire que vous ne faciez à nous advertir de tout ce que vous apprendrez et pourra survenir par delà.</p>
-      <p> Pryant Dieu, mon cousin, vous donner ce que desirez. Escript à Carcassonne, le XXle jour de janvier 156h (1565).</p>
+    <p>Mon cousin, j'ay entendu par le sr de la
+      Serre ce que vous m'avez escript estre survenu
+      à Paris à l'arrivée de mon cousin le cardinal
+      de Lorraine, que j'eusse bien désiré avoir
+      passé d'autre sorte; mais encores ay-je eu
+      plaisir d'avoir sceu par quelques autres lectres
+      venues de Paris, qu'il n'y ayt rien eu davantaige
+      et que la ville soyt demourée en repos
+      dont j'actendz à sçavoir plus avant les particularitez
+      par celluy que vous escripvez quant de
+      quant me devoir envoyer troys jours après; jusques
+      auquel temps j'ay différay vous renvoyer
+      ledict de la Serre, ne plus amplement vous
+      en escripre, sinon par ce porteur, maistre des
+      comptes, qui estoit venu icy pour aucuns
+      affaires de la Chambre, vous pryant, mon cousin,
+      faire en sorte que toutes choses soyent
+      maintenues en la doulceur et paisible transquillité
+      que vous sçavez que je désire et que
+      requiert le service du Roy monsieur mon filz.
+      J'estime que le mauvais temps qu'il faict est
+      cause qu'il n'est point encores venu d'autres,
+      car il y a huict jours que sommes icy comme
+      assiegez des neiges et de présent d'un dégel
+      et pluye si grande que tous ses petiz ruisseaux
+      sont torrentz, qui ne se peuvent passer
+      sans très grand danger, dont aussy nous recevons
+      très grande incommodité; cependant esloignez,
+      comme nous sommes, le plus grant
+      ayse que je puisse avoir est que tout aille bien
+      et soyt contenu en paix partout; à quoy je
+      m'asseure que en ce qui est de vostre charge
+      vous n'obmectrez ryens, comme je désire que
+      vous ne faciez à nous advertir de tout ce que
+      vous apprendrez et pourra survenir par delà.
+      Pryant Dieu, mon cousin, vous donner ce
+      que desirez. Escript à Carcassonne, le XXIe jour
+      de janvier 1564 (1565).</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
