:bento: (lettres) correction
640915.LCM02M.MONT

--- a/lettres.html
+++ b/lettres.html
@@ -2346,7 +2346,7 @@
     
     </article><article><h2 id='640915.LCM02M.MONT'>Lettre n° 640915.LCM02M.MONT<a href="https://beatricemundo.github.io/lettresmedicis6466/#640915.LCM02M.MONT">↑</a></h2><discours loc="CathMed" id="640915.LCM02M.MONT" date="1564-15septembre">
       <p> Monsieur du Ferrier, par la dépesche que le Roy monsieur mon filz vous faict présentement vous verrez la response qu'il vous faict à celles que nous avons receues de vous, et comme il a esté bien ayse que vous luy ayez si amplement faict entendre les discours et nouvelles qui sont au lieu où vous estes, et pour ceste cause je vous prie de continuer et quant à noz nouvelles, d'aultant qu'il vous en escript tout ce que nous en avons pour ceste heure, elle me gardera de vous en faire la présente plus longue; priant Dieu, Monsieur du Ferrier, qu'il vous ait en sa saincte garde…</p>
-      <p> Escript à Montélimart, le xve jour de septembre 1564.</p>
+      <p> Escript à Montélimart, le XVe jour de septembre 1564.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.  </p>
     </discours>
