:bento: (lettres) correction
640921.LCM02.BOUL.a

--- a/lettres.html
+++ b/lettres.html
@@ -2353,7 +2353,7 @@
     
     
     </article><article><h2 id='640921.LCM02.BOUL.a'>Lettre n° 640921.LCM02.BOUL.a<a href="https://beatricemundo.github.io/lettresmedicis6466/#640921.LCM02.BOUL.a">↑</a></h2><discours loc="CathMed" id="640921.LCM02.BOUL.a" date="1564—21septembre">
-      <p> Mon cousin, le Roy monsieur mon filz vous a continué le don qu'il avoyt l'autre jour faict pour vous à Monsieur le Connestable du greffe de Thoulouse, et pouvez estre asseuré que là où luy et moy vous pourrons bien faire, vous congnoistrez combien il a voz services agréables, ainsy que je l'ay dict au sieur Scipion, présent porteur, sur lequel me remectant je ne vous feray plus longue lettre. Pryant Dieu vous avoir en sa garde. Escript à Boullaines, le XXle jour de septembre 1564.</p>
+      <p> Mon cousin, le Roy monsieur mon filz vous a continué le don qu'il avoyt l'autre jour faict pour vous à Monsieur le Connestable du greffe de Thoulouse, et pouvez estre asseuré que là où luy et moy vous pourrons bien faire, vous congnoistrez combien il a voz services agréables, ainsy que je l'ay dict au sieur Scipion, présent porteur, sur lequel me remectant je ne vous feray plus longue lettre. Pryant Dieu vous avoir en sa garde. Escript à Boullaines, le XXIe jour de septembre 1564.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
