:bento: (lettres) correction
640925.LCM02.AVIG

--- a/lettres.html
+++ b/lettres.html
@@ -2407,8 +2407,8 @@
         par ceulx de ladicte Cour et non sans
         vostre intelligence; mais ayant sceu ce que depuis
         Quincey despeché du sieur de Gonnord
-        m'a diet du devoir en quoy le premier président
-        se veultmectre en vostre endroict, j'estime,
+        m'a dict du devoir en quoy le premier président
+        se veul tmectre en vostre endroict, j'estime,
         mon cousin, que vous aurez advisé depuis à y
         prendre meilleure résolution, car le Conseil
         trouve le terme de la St Martin bien long pour
