:bento: (lettres) correction
640928.LCM02.AVIG

--- a/lettres.html
+++ b/lettres.html
@@ -2483,7 +2483,30 @@
     
     
     </article><article><h2 id='640928.LCM02.AVIG'>Lettre n° 640928.LCM02.AVIG<a href="https://beatricemundo.github.io/lettresmedicis6466/#640928.LCM02.AVIG">↑</a></h2><discours loc="CathMed" id="640928.LCM02.AVIG" date="1564—28septembre">
-      <p> Mon cousin, je vous ay, depuis deux jours, renvoyé l'homme du sieur Iherosnyme de Thurin avecques ample response à toutes voz lettres; et pour ce que nous nous trouvons fort courtz de deniers qu'il nous fault fournir aux Suysses dès la fin de ce moys, oultre les deux cens mille livres jà partiz de Paris, il m'a semblé vous faire encores ceste recharge, et prier, mon cousin, sur tout le service que vous nous désirez jamais faire, d'employer tous moyens pour faire sortir argent de ceste rente, vous aydant de tous ceulx qui y pourront ser- vir. J'en escriptz encores au premier président et à Marcel, et renvoye ce porteur, qui, pour la congnoissance qu'il a des moyens du sieur de Gonnord, peult-estre n'y sera inutille; aidez-vous-en et remuez toutes bources pour nous faire secourir à ce grant besoing et dès ce qu'il y aura somme notable faictes-la partir; autrement je vous assure, mon cousin, que noz affaires en Suisse sont en très mauvays estât. Priant Dieu, mon cousin, vous avoir en sa garde. A Avignon, le XXVIIIe jour de septembre 1564.</p>
+      <p>Mon cousin, je vous ay, depuis deux jours,
+        renvoyé l'homme du sieur Iherosnyme de
+        Thurin avecques ample response à toutes voz
+        lettres; et pour ce que nous nous trouvons fort
+        courtz de deniers qu'il nous fault fournir aux
+        Suysses dès la fin de ce moys, oultre les deux
+        cens mille livres jà partiz de Paris, il m'a
+        semblé vous faire encores ceste recharge, et
+        prier, mon cousin, sur tout le service que vous
+        nous désirez jamais faire, d'employer tous
+        moyens pour faire sortir argent de ceste rente,
+        vous aydant de tous ceulx qui y pourront servir.
+        J'en escriptz encores au premier président
+        et à Marcel, et renvoye ce porteur, qui, pour
+        la congnoissance qu'il a des moyens du sieur
+        de Gonnord, peult-estre n'y sera inutille;
+        aidez-vous-en et remuez toutes bources pour
+        nous faire secourir à ce grant besoing et dès
+        ce qu'il y aura somme notable faictes-la partir;
+        autrement je vous assure, mon cousin, que
+        noz affaires en Suisse sont en très mauvays
+        estât. Priant Dieu, mon cousin, vous avoir en
+        sa garde. A Avignon, le XXVIIIe jour de septembre
+        1564.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
