:bento: (lettres) correction
640926.LCM02.AVIG

--- a/lettres.html
+++ b/lettres.html
@@ -2475,8 +2475,23 @@
     
     
     </article><article><h2 id='640926.LCM02.AVIG'>Lettre n° 640926.LCM02.AVIG<a href="https://beatricemundo.github.io/lettresmedicis6466/#640926.LCM02.AVIG">↑</a></h2><discours loc="CathMed" id="640926.LCM02.AVIG" date="1564—26septembre">
-      <p> Monsieur de Rennes, s'en allant le sr de Lanssac, chevalier de l'ordre et conseiller du conseil privé du Roy monsieur mon filz despeché de luy pour l'occasion que vous entendrez, il ne vous fault pas longue lettre. Il vous dira que vous avons receu les lettres du ne de ce mois et ne me sçauriez faire plus de plaisir que de me tenir continuellement advertye de ce qui s'offre.</p>
-      <p> Tout ce que je vous pourrois escripre davantaige, vous le sçaurez de luy que je vous prye croyre comme vous feriez moy-mesmes. Par luy je vous envoyé troys mille escuz dont le Roy mondict filz vous faict don pour vous ayder à supporter les despenses que vous faictes, actendant myeulx. Pryant Dieu, Monsieur de Rennes, vous avoir en sa saincte garde. Escript à Avignon, le XXVIe jour de septembre 1564.</p>
+      <p>Monsieur de Rennes, s'en allant le sr de
+        Lanssac, chevalier de l'ordre et conseiller du
+        conseil privé du Roy monsieur mon filz despeché
+        de luy pour l'occasion que vous entendrez,
+        il ne vous fault pas longue lettre. Il vous dira que
+        vous avons receu les lettres du ne de ce mois et
+        ne me sçauriez faire plus de plaisir que de me
+        tenir continuellement advertye de ce qui s'offre.
+        Tout ce que je vous pourrois escripre davantaige,
+        vous le sçaurez de luy que je vous prye
+        croyre comme vous feriez moy-mesmes. Par
+        luy je vous envoyé troys mille escuz dont le
+        Roy mondict filz vous faict don pour vous ayder
+        à supporter les despenses que vous faictes, actendant
+        myeulx. Pryant Dieu, Monsieur de
+        Rennes, vous avoir en sa saincte garde. Escript
+        à Avignon, le XXVIe jour de septembre 1564.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">De L'Aubespine.</hi></p>
     </discours>
