:bento: (lettres) OCR
641005.LCM02.AVIG

--- a/lettres.html
+++ b/lettres.html
@@ -2548,7 +2548,24 @@
     
     
     </article><article><h2 id='641005.LCM02.AVIG'>Lettre n° 641005.LCM02.AVIG<a href="https://beatricemundo.github.io/lettresmedicis6466/#641005.LCM02.AVIG">↑</a></h2><discours loc="CathMed" id="641005.LCM02.AVIG" date="1564—5octobre">
-      <p> Mon cousin, j'ay tant d'occasion de vous aymer et désirer vostre contentement que je vous puis dire que vous ne le serez jamais tant que je le désire, vous pryant croyre que absence ne aultre occasion ne me divertira ja- mais de l'affection que je vous porte et du désir que j'ay de vous veoir où j'espère que vous serez. Ayant advisé, pour y mectre la seuretté que je seray bien ayse d'y veoir, d'es- cripre à ma cousine la duchesse de Nevers la lettre dont vous verrez la coppie et envoyer ce porteur devers elle pour la visitter et luy faire sur ce plus avant entendre mon intention, que vous trouverez conforme à ce que vous avez deu espérer de mon affection en vostre en- droict. Pryant Dieu, mon cousin, vous avoir en sa saincte et digne garde. A Avignon, le ve jour d'octobre 1564.</p>
+      <p>Mon cousin, j'ay tant d'occasion de vous
+        aymer et désirer vostre contentement que je
+        vous puis dire que vous ne le serez jamais tant
+        que je le désire, vous pryant croyre que absence
+        ne aultre occasion ne me divertira jamais
+        de l'affection que je vous porte et du
+        désir que j'ay de vous veoir où j'espère que
+        vous serez. Ayant advisé, pour y mectre la
+        seuretté que je seray bien ayse d'y veoir, d'escripre
+        à ma cousine la duchesse de Nevers la
+        lettre dont vous verrez la coppie et envoyer ce
+        porteur devers elle pour la visitter et luy faire
+        sur ce plus avant entendre mon intention, que
+        vous trouverez conforme à ce que vous avez
+        deu espérer de mon affection en vostre endroict.
+        Pryant Dieu, mon cousin, vous avoir en
+        sa saincte et digne garde. A Avignon, le Ve jour
+        d'octobre 1564.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
